<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/pref_holder_transfer_method" >

        <CheckBoxPreference
                app:defaultValue="true"
                app:key="transfer_method_ble"
                app:title="@string/bluetooth_le" />

        <CheckBoxPreference
                app:defaultValue="false"
                app:enabled="true"
                app:key="transfer_method_wifi"
                app:title="@string/wifi_aware" />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/pref_holder_engagement_method" >

        <CheckBoxPreference
                app:defaultValue="true"
                app:key="engagement_method_qr"
                app:title="@string/qr_code" />

        <CheckBoxPreference
                app:defaultValue="false"
                app:key="engagement_method_nfc"
                app:title="@string/nfc" />

    </PreferenceCategory>

</PreferenceScreen>
