<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="fragment" type="com.ul.ims.gmdl.fragment.AppModeFragment"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_select_function" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="22sp"
                android:id="@+id/txt_select_function_label"/>
        <Button
                android:text="@string/btn_holder_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_holder" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_select_function_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.498"
                android:onClick="@{fragment::onHolderSelected}"/>
        <Button
                android:text="@string/btn_verifier_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_verifier"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:onClick="@{fragment::onVerifierSelected}" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_holder"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>