<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.ul.ims.gmdl.cbordata.model.UserCredential" />

        <variable
            name="fragment"
            type="com.ul.ims.gmdl.fragment.DisplayCredentialsFragment" />

        <variable
            name="vm"
            type="com.ul.ims.gmdl.viewmodel.DisplayCredentialsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:visibility="@{safeUnbox(vm.loadingVisibility)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/img_portrait"
                android:layout_width="166dp"
                android:layout_height="182dp"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/user_image_content_desc"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:userImage="@{user.portraitOfHolder}"
                tools:srcCompat="@drawable/ic_baseline_image" />

            <View
                android:id="@+id/line_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_portrait" />

            <TextView
                android:id="@+id/txt_family_name_label"
                style="@style/CredentialTitlesStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/family_name"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_divider" />

            <TextView
                android:id="@+id/txt_given_names_label"
                style="@style/CredentialTitlesStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/given_name"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_family_name_label" />

            <TextView
                android:id="@+id/txt_birthdate_label"
                style="@style/CredentialTitlesStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/date_of_birth"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_given_names_label" />

            <TextView
                android:id="@+id/txt_family_name"
                style="@style/CredentialValueStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{user.familyName}"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toEndOf="@+id/txt_family_name_label"
                app:layout_constraintTop_toBottomOf="@+id/line_divider"
                tools:text="do Nascimento" />

            <TextView
                android:id="@+id/txt_given_names"
                style="@style/CredentialValueStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{user.givenNames}"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toEndOf="@+id/txt_given_names_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_family_name_label"
                tools:text="Edson Arantes" />

            <TextView
                android:id="@+id/txt_birthdate"
                style="@style/CredentialValueStyle"
                android:layout_marginTop="@dimen/default_margin"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:dateFormat="@{user.dateOfBirth}"
                app:layout_constraintStart_toEndOf="@+id/txt_birthdate_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_given_names_label"
                tools:text="Oct 23 1940" />

            <Button
                    android:text="@string/btn_share_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_share_credentials"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.533"
                    android:onClick="@{fragment::onShare}"
                    android:visibility="@{safeUnbox(vm.shareButtonVisibility)}"
                app:layout_constraintTop_toBottomOf="@+id/txt_vehicle_categories" />
            <Button
                android:text="@string/btn_share_text_nfc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share_credentials_nfc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                android:onClick="@{fragment::onShareNFC}"
                android:visibility="@{safeUnbox(vm.shareButtonVisibility)}"
                app:layout_constraintTop_toBottomOf="@+id/btn_share_credentials"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:id="@+id/txt_issue_date_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/date_of_issue"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_birthdate_label" />

            <TextView
                android:id="@+id/txt_expiry_date_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/date_of_expiry"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_issue_date_label" />

            <TextView
                android:id="@+id/txt_issuing_country_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/issuing_country"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_expiry_date_label" />

            <TextView
                android:id="@+id/txt_issuing_authority_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/issuing_authority"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_issuing_country_label" />

            <TextView
                android:id="@+id/txt_license_number_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/license_number"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_issuing_authority_label" />

            <TextView
                android:id="@+id/txt_vehicle_category_label"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/categories_of_vehicles"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_license_number_label" />

            <TextView
                android:id="@+id/txt_issue_date"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:dateFormat="@{user.dateOfIssue}"
                app:layout_constraintStart_toEndOf="@+id/txt_issue_date_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_birthdate_label"
                tools:text="Jan 02 2017" />

            <TextView
                android:id="@+id/txt_expiry_date"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:dateFormat="@{user.dateOfExpiry}"
                app:layout_constraintStart_toEndOf="@+id/txt_expiry_date_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_issue_date_label"
                tools:text="Jan 02 2027" />

            <TextView
                android:id="@+id/txt_issuing_country"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{user.issuingCountry}"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toEndOf="@+id/txt_issuing_country_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_expiry_date_label"
                tools:text="US" />

            <TextView
                android:id="@+id/txt_issuing_authority"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{user.issuingAuthority}"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toEndOf="@+id/txt_issuing_authority_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_issuing_country_label"
                tools:text="Google" />

            <TextView
                android:id="@+id/txt_license_number"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{user.licenseNumber}"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:layout_constraintStart_toEndOf="@+id/txt_license_number_label"
                app:layout_constraintTop_toBottomOf="@+id/txt_issuing_authority_label"
                tools:text="5094962111" />

            <TextView
                android:id="@+id/txt_vehicle_categories"
                style="@style/CredentialValueStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:visibility="@{safeUnbox(vm.credentialVisibitity)}"
                app:categories="@{user.categoriesOfVehicles}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vehicle_category_label"
                tools:text="B" />

            <TextView
                android:id="@+id/txt_issuer_auth"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/issuer_data_auth"
                android:visibility="@{safeUnbox(vm.issuerAuthVisibility)}"
                app:layout_constraintBottom_toTopOf="@+id/img_portrait"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.166" />

            <ImageView
                android:id="@+id/img_is_issuer_data_authentic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:issuerAuthVal="@{safeUnbox(user.issuerDataAuthentication)}"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@+id/txt_issuer_auth"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444"
                tools:srcCompat="@drawable/ic_baseline_image" />

            <TextView
                android:id="@+id/txt_device_auth"
                style="@style/CredentialTitlesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/device_sign_auth"
                app:layout_constraintBottom_toTopOf="@+id/img_portrait"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_issuer_auth"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                app:issuerAuthVal="@{safeUnbox(user.deviceSign)}"
                app:layout_constraintBottom_toTopOf="@+id/img_portrait"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toEndOf="@+id/txt_device_auth"
                tools:srcCompat="@drawable/ic_baseline_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>